consulta lista de jogadores finalizado